[tool.poetry]
name = "niconico-py"
version = "1.2.4"
description = "ニコニコ動画や生放送等の各種サイトの非公開APIに簡単にアクセスするためのPythonライブラリ"
authors = [
  "Negima1072 <67858442+Negima1072@users.noreply.github.com>",
  "tasuren"
]
readme = "README.md"
packages = [{include = "niconico"}]
license = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
]
repository = "https://github.com/niconicolibs/niconico.py"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
