[project]
name = "niconico.py"
version = "2.1.0"
description = "API wrapper for NicoNico services"
authors = [{ name = "Negima1072", email = "ngm1072@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.2,<3.0.0",
    "requests>=2.32.3,<3.0.0",
]

[project.urls]
Repository = "https://github.com/niconicolibs/niconico.py"

[project.scripts]
niconico = "niconico.__main__:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408,<2.0.0",
    "pytest>=9.0.3,<10.0.0",
    "ruff>=0.5.6,<0.6.0",
    "types-requests>=2.32.0.20240712",
]

[tool.pytest.ini_options]
markers = [
    "live: tests that call live Niconico endpoints",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
target-version = "py311"

[tool.pyright]
include = ["niconico"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "ANN101",
    "ANN102"
]
"examples/*.py" = [
    "INP001",
    "T201"
]
"tests/*.py" = [
    "S101"
]

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.hatch.build.targets.wheel]
packages = ["niconico"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
